Fix : .연산자 분리